asap 1.0.1